--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>JURUSAN SMKN 1 KAMAL [umar]</title>
-    <link rel="stylesheet" href="style.CSS>
+    <link rel="stylesheet" href="style.CSS">
   </head>
   <body>
     <div class="kartu-profil">
