--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     <div class="kartu-profil">
     <img src="foto-profil.jpg" alt="foto profil saya">
-    <h1>REKAYASA PERANGKAT LUNAK (RPL)</h1>
-    <p>Rekayasa Perangkat Lunak (RPL) adalah bidang disiplin ilmu yang
+    <h1>RPL</h1>
+    <p>RPL (Rekayasa Perangkat Lunak) adalah bidang disiplin ilmu yang
       menerapkan prinsip-prinsip rekayasa secara sistematis untuk merancang, mengembangkan, menguji,
       dan memelihara perangkat lunak yang andal dan efisien.</p>
     <a href=https://www.instagram.com/usernameanda">kunjungi instagram saya</a>
