--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="kartu-profil">
-    <img src="foto-profil.jpg" alt="foto profil saya">
+    <img src="321898ea-f573-4fce-99d8-6bcc6ce6df13.jpg" alt="foto profil saya">
     <h1>RPL</h1>
     <p>RPL (Rekayasa Perangkat Lunak) adalah bidang disiplin ilmu yang
       menerapkan prinsip-prinsip rekayasa secara sistematis untuk merancang, mengembangkan, menguji,
