--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>RPL (Rekayasa Perangkat Lunak) adalah bidang disiplin ilmu yang
       menerapkan prinsip-prinsip rekayasa secara sistematis untuk merancang, mengembangkan, menguji,
       dan memelihara perangkat lunak yang andal dan efisien.</p>
-    <a href=https://www.instagram.com/usernameanda">kunjungi instagram saya</a>
+    <a href=https://www.instagram.com/usernameanda">kunjungi</a>
     <button id="sapaButton">sapa saya!</button>
     </div>
     <script src="script.js"></script>
